...
                                <rect key="frame" x="106.66666666666669" y="179" width="201" height="25"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="25" id="X0P-s6-Dw4"/>
                                    <constraint firstAttribute="width" constant="201" id="xfQ-c7-H8e"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                <state key="normal" title="Subscribe">
                                    <color key="titleColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="pressedSubscribe:" destination="8jo-Pj-RMa" eventType="touchDown" id="QsT-ag-zjJ"/>
                                </connections>
                            </button>
                            <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9q-fz-g7F">
                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="49" id="icl-Uk-3Vx"/>
                                </constraints>
                                <items>
                                    <tabBarItem title="Ranking" image="rank_icon.png" id="tRj-q1-3XP"/>
                                    <tabBarItem title="Search" image="search_icon.png" id="Cv0-E6-gq4"/>
                                    <tabBarItem title="Home" image="home_icon.png" id="Yxu-Eh-QBt"/>
                                    <tabBarItem title="Stats Map" image="world.png" id="U0t-pf-f8p"/>
                                </items>
                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tabBar>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgf-dp-X39">
                                <rect key="frame" x="0.0" y="44" width="414" height="45"/>
...
                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <textAttributes key="titleTextAttributes">
                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Your Subscribtion" id="R62-9W-s0k">
                                        <barButtonItem key="leftBarButtonItem" title="Item" image="team.png" id="iv1-gb-D7l">
                                            <connections>
                                                <action selector="viewCredit:" destination="BYZ-38-t0r" id="nLg-XY-mUd"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="kak-8m-da7">
                                            <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ycL-5W-Sds">
                                <rect key="frame" x="0.0" y="144" width="414" height="669"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" text="" placeholder="Australia" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wpq-VK-btd">
                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <textInputTraits key="textInputTraits" textContentType="country-name"/>
                            </searchBar>
                            <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIr-E0-pLk">
                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
...
