...
        else
        {
            let report = UD.get_report(country: viewing_country)
            Country.text = "\(UD.getFlagIcon(country: report.country_code)) \(viewing_country)"
            if UD.isSubscribed(country: viewing_country){
                //Displaying subscribe or unsubscribe button
                Subscribe.setTitle("Unsubscribe", for: .normal)
                subbed = true
            }
            //Setting the statistic for the profile page
            let active = report.total_confirmed - report.total_deaths - report.total_recovered
            Death.text = "Deaths: \(report.total_deaths) cases"
            Death.backgroundColor = .darkGray
...
